# cat-finder

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  setup.sh
.cargo/: config.toml
demo/: server.py
docs/: usage.md
scripts/: demo.sh  download_correct_model.sh  download_models.sh  download_yolo_model.py  find.sh  get_yolo_model.py  run.sh  test.sh
src/: main.rs
