[package]
name = "cat-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
chrono = "0.4"
anyhow = "1.0"
ort = { version = "1.16", features = ["download-binaries"] }
image = "0.25"
ndarray = "0.15"
sha2 = "0.10"

[[bin]]
name = "cat-finder"
path = "src/main.rs"

[[bin]]
name = "find-duplicates"
path = "src/bin/find-duplicates.rs"
